--- a/WalSmart/app/src/main/res/layout/activity_main.xml
+++ b/WalSmart/app/src/main/res/layout/activity_main.xml
@@ -4,21 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/slate_grey">
 
 
     <ImageView
         android:id="@+id/instruction"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="348dp"
+        android:layout_height="641dp"
         android:layout_centerHorizontal="true"
         app:srcCompat="@drawable/instruction" />
 
     <Button
         android:id="@+id/start_btn"
-        android:layout_width="match_parent"
-        android:layout_height="66dp"
-        android:layout_below="@id/instruction"
-        android:text="@string/start_shopping" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:text="@string/start_shopping"/>
 
 </RelativeLayout>
