--- a/WalSmart/app/src/main/res/layout/activity_sets.xml
+++ b/WalSmart/app/src/main/res/layout/activity_sets.xml
@@ -16,5 +16,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
+        android:layout_marginBottom="@dimen/fab_margin"
         android:text="@string/basket" />
 </RelativeLayout>
