--- a/WalSmart/app/src/main/res/values/themes.xml
+++ b/WalSmart/app/src/main/res/values/themes.xml
@@ -2,16 +2,18 @@
     <!-- Base application theme. -->
     <style name="Theme.WalSmart" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/apricot</item>
+        <item name="colorPrimaryVariant">@color/apricot</item>
+        <item name="colorOnPrimary">@color/black_coffee</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/floral_white</item>
+        <item name="colorSecondaryVariant">@color/alice_blue</item>
+        <item name="colorOnSecondary">@color/black_coffee</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:background">@color/slate_grey</item>
+        <item name="android:textColor">@color/black_coffee</item>
     </style>
 
     <style name="Theme.WalSmart.NoActionBar">
@@ -22,4 +24,6 @@
     <style name="Theme.WalSmart.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.WalSmart.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+
 </resources>
