--- a/WalSmart/app/src/main/res/layout/activity_basket.xml
+++ b/WalSmart/app/src/main/res/layout/activity_basket.xml
@@ -13,6 +13,8 @@
         android:layout_marginTop="@dimen/fab_margin"
         android:layout_marginStart="@android:dimen/app_icon_size"
         android:text="@string/prepared_sets"
+        android:textSize="@dimen/btn_text"
+
         />
 
     <Button
@@ -22,7 +24,9 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="@dimen/fab_margin"
         android:layout_marginEnd="@android:dimen/app_icon_size"
-        android:text="@string/individual_products"/>
+        android:text="@string/individual_products"
+        android:textSize="@dimen/btn_text"
+        />
 
   <!--  <LinearLayout
         android:id="@id/list"
@@ -60,7 +64,9 @@
         android:text="@string/checkout"
         android:layout_centerInParent="true"
         android:layout_marginBottom="@dimen/fab_margin"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true"
+        android:textSize="@dimen/btn_text"
+        />
 
 
 </RelativeLayout>
