--- a/WalSmart/app/src/main/res/layout/activity_confirmation.xml
+++ b/WalSmart/app/src/main/res/layout/activity_confirmation.xml
@@ -34,5 +34,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:layout_marginBottom="@dimen/fab_margin"
-        android:text="@string/finish_shopping" />
+        android:text="@string/finish_shopping"
+        android:textSize="@dimen/btn_text"
+        />
 </RelativeLayout>
