--- a/WalSmart/app/src/main/res/layout/activity_main.xml
+++ b/WalSmart/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,8 @@
         android:layout_centerInParent="true"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/fab_margin"
-        android:text="@string/start_shopping"/>
+        android:text="@string/start_shopping"
+        android:textSize="@dimen/btn_text"
+        />
 
 </RelativeLayout>
