--- a/WalSmart/app/src/main/res/layout/activity_products.xml
+++ b/WalSmart/app/src/main/res/layout/activity_products.xml
@@ -18,6 +18,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:layout_marginBottom="@dimen/fab_margin"
+        android:textSize="@dimen/btn_text"
 
         android:text="@string/basket" />
 
