--- a/WalSmart/app/src/main/res/layout/activity_products.xml
+++ b/WalSmart/app/src/main/res/layout/activity_products.xml
@@ -11,6 +11,130 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <GridLayout
+        android:id="@+id/grid_products"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/basket_btn"
+        android:layout_below="@id/search_product"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="4dp"
+        android:columnCount="2">
+
+        <RelativeLayout
+            android:id="@+id/product_cell">
+
+            <ImageView
+                android:id="@+id/product_pic"
+                android:layout_width="200dp"
+                android:layout_height="150dp"
+                app:srcCompat="@drawable/eggs" />
+
+            <TextView
+                android:id="@+id/product_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/product_pic"
+                android:layout_centerHorizontal="true"
+                android:layout_margin="@dimen/fab_margin"
+                android:text="Eggs (6)"
+                android:textColor="@color/floral_white"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:id="@+id/product_quantity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/product_description"
+                android:layout_centerHorizontal="true"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/decrease"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:onClick="decreaseInteger"
+                    android:src="@drawable/minus" />
+                <TextView
+                    android:id="@+id/integer_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/fab_margin"
+                    android:layout_marginTop="2dp"
+                    android:text="0"
+                    android:textColor="@color/floral_white"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
+
+                <ImageButton
+                    android:id="@+id/increase"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="@dimen/fab_margin"
+                    android:onClick="increaseInteger"
+                    android:src="@drawable/plus" />
+            </LinearLayout>
+
+        </RelativeLayout>
+<RelativeLayout
+    android:id="@+id/product_cell2">
+    <ImageView
+        android:id="@+id/product_pic2"
+        android:layout_width="200dp"
+        android:layout_height="150dp"
+        app:srcCompat="@drawable/eggs" />
+
+    <TextView
+        android:id="@+id/product_description2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/product_pic2"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="@dimen/fab_margin"
+        android:text="Eggs (6)"
+        android:textColor="@color/floral_white"
+        android:textSize="25sp"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:id="@+id/product_quantity2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/product_description2"
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/decrease2"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:onClick="decreaseInteger"
+            android:src="@drawable/minus" />
+        <TextView
+            android:id="@+id/integer_number2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/fab_margin"
+            android:layout_marginTop="2dp"
+            android:text="0"
+            android:textColor="@color/floral_white"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+        <ImageButton
+            android:id="@+id/increase2"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="@dimen/fab_margin"
+            android:onClick="increaseInteger"
+            android:src="@drawable/plus" />
+    </LinearLayout>
+
+</RelativeLayout>
+
+    </GridLayout>
+
     <Button
         android:id="@+id/basket_btn"
         android:layout_width="wrap_content"
@@ -18,9 +142,8 @@
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:layout_marginBottom="@dimen/fab_margin"
-        android:textSize="@dimen/btn_text"
+        android:text="@string/basket"
 
-        android:text="@string/basket" />
-
+        android:textSize="@dimen/btn_text" />
 
 </RelativeLayout>
