--- a/WalSmart/app/src/main/res/layout/activity_main.xml
+++ b/WalSmart/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,13 @@
         android:id="@+id/instruction"
         android:layout_width="348dp"
         android:layout_height="641dp"
+        android:layout_centerHorizontal="true" />
+ <!--   <ImageView
+        android:id="@+id/instruction"
+        android:layout_width="348dp"
+        android:layout_height="641dp"
         android:layout_centerHorizontal="true"
-        app:srcCompat="@drawable/instruction" />
+        app:srcCompat="@drawable/instruction" />-->
 
     <Button
         android:id="@+id/start_btn"
