--- a/WalSmart/app/src/main/res/layout/product_design.xml
+++ b/WalSmart/app/src/main/res/layout/product_design.xml
@@ -8,7 +8,8 @@
         android:layout_width="156dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        android:background="@color/apricot"
+        android:padding="10dp"
+        android:background="@drawable/boarder"
         android:src="@drawable/ic_launcher_foreground" />
 
     <LinearLayout
