--- a/WalSmart/app/src/main/res/layout/activity_product_sets.xml
+++ b/WalSmart/app/src/main/res/layout/activity_product_sets.xml
@@ -4,21 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProductSetActivity">
+    tools:context=".ProductSet.ProductSetActivity">
     <SearchView
-        android:id="@+id/search_set"
+        android:id="@+id/search_product_set"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:clickable="true"
+        android:focusable="true" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_below="@+id/search_product_set"
+        android:id="@+id/my_product_sets"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/basket_btn_sets"
+        android:layout_marginTop="@dimen/fab_margin"
+        android:layout_marginBottom="@dimen/fab_margin" />
 
     <Button
-        android:id="@+id/basket_btn2"
+        android:id="@+id/basket_btn_sets"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        android:layout_marginBottom="@dimen/fab_margin"
+        android:layout_alignParentBottom="true"
         android:text="@string/basket"
-        android:textSize="@dimen/btn_text"
-        />
+        android:textSize="@dimen/btn_text" />
 </RelativeLayout>
