--- a/WalSmart/app/src/main/res/layout/product_design.xml
+++ b/WalSmart/app/src/main/res/layout/product_design.xml
@@ -21,7 +21,7 @@
             android:id="@+id/product_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/fab_margin"
+            android:layout_marginVertical="@dimen/fab_margin"
             android:text="Product name"
             android:textColor="@color/floral_white"
             android:textSize="25sp"
@@ -31,7 +31,6 @@
             android:id="@+id/product_size"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Product size"
             android:textColor="@color/floral_white"
             android:layout_marginHorizontal="@dimen/fab_margin"
             android:textSize="20sp" />
