--- a/WalSmart/app/src/main/res/layout/activity_edit_set.xml
+++ b/WalSmart/app/src/main/res/layout/activity_edit_set.xml
@@ -12,7 +12,7 @@
         android:id="@+id/set_info">
 
         <ImageView
-            android:id="@+id/product_image"
+            android:id="@+id/set_image"
             android:layout_width="156dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
@@ -26,7 +26,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/product_name"
+                android:id="@+id/set_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="@dimen/fab_margin"
@@ -36,7 +36,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/product_price"
+                android:id="@+id/set_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="@dimen/fab_margin"
