--- a/WalSmart/app/src/main/res/layout/popup_product_amount.xml
+++ b/WalSmart/app/src/main/res/layout/popup_product_amount.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#6B000000"
+    android:background="@color/slate_grey"
     android:gravity="center"
     android:padding="@dimen/fab_margin">
 
@@ -16,7 +16,11 @@
             android:background="@color/floral_white"
             android:orientation="vertical"
             android:padding="10dp">
-
+            <ImageButton
+                android:id="@+id/cancel_btn"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/cancel" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
