--- a/WalSmart/app/src/main/res/values/colors.xml
+++ b/WalSmart/app/src/main/res/values/colors.xml
@@ -10,6 +10,6 @@
     <color name="slate_grey">#738290</color>
     <color name="alice_blue">#F1F4F9</color>
     <color name="floral_white">#FFFCF7</color>
-    <color name="black_coffee">#352E38</color>
+    <color name="black_coffee">#2B2B2B</color>
     <color name="apricot">#FDC9B0</color>
 </resources>
