--- a/WalSmart/app/src/main/res/layout/activity_order.xml
+++ b/WalSmart/app/src/main/res/layout/activity_order.xml
@@ -64,11 +64,10 @@
         android:layout_marginBottom="80dp"
         android:ems="10"
         android:inputType="phone"
-        android:textSize="20sp"
-        />
+        android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/priceTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/submit_btn"
