--- a/WalSmart/app/src/main/res/values/colors.xml
+++ b/WalSmart/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="floral_white">#FFFCF7</color>
     <color name="black_coffee">#2B2B2B</color>
     <color name="apricot">#FDC9B0</color>
+    <color name="green">#859A6D</color>
 </resources>
