--- a/WalSmart/app/src/main/res/layout/activity_edit_set.xml
+++ b/WalSmart/app/src/main/res/layout/activity_edit_set.xml
@@ -53,18 +53,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/set_info"
-        android:layout_above="@+id/add_btn_sets"
+        android:layout_above="@+id/add_to_basket"
         android:layout_marginTop="@dimen/fab_margin"
         android:layout_marginBottom="@dimen/fab_margin" />
-
-    <Button
-        android:id="@+id/add_btn_sets"
+    <LinearLayout
+        android:id="@+id/add_to_basket"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:text="@string/add_to_basket"
-        android:textSize="@dimen/btn_text" />
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginVertical="@dimen/fab_margin"
+            android:src="@drawable/cart"/>
+        <Button
+            android:id="@+id/add_btn_sets"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/fab_margin"
+            android:text="@string/add_to_basket"
+            android:textSize="@dimen/btn_text" />
+    </LinearLayout>
+
 
 </RelativeLayout>
