--- a/WalSmart/app/src/main/res/layout/popup_product_amount.xml
+++ b/WalSmart/app/src/main/res/layout/popup_product_amount.xml
@@ -16,11 +16,14 @@
             android:background="@color/floral_white"
             android:orientation="vertical"
             android:padding="10dp">
+
             <ImageButton
                 android:id="@+id/cancel_btn"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/cancel" />
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginBottom="@dimen/fab_margin"
+                android:foreground="@drawable/selector_cancel" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -36,22 +39,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginVertical="@dimen/fab_margin"
+                android:layout_marginVertical="32dp"
                 android:background="@color/floral_white"
                 android:orientation="horizontal">
 
                 <ImageButton
                     android:id="@+id/decrease"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/minus" />
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:foreground="@drawable/selector_minus" />
 
                 <TextView
                     android:id="@+id/product_amount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/fab_margin"
-                    android:layout_marginTop="2dp"
                     android:background="@color/floral_white"
                     android:textColor="@color/black_coffee"
                     android:textSize="25sp"
@@ -59,19 +61,34 @@
 
                 <ImageButton
                     android:id="@+id/increase"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_marginStart="@dimen/fab_margin"
-                    android:src="@drawable/plus" />
+                    android:foreground="@drawable/selector_plus" />
             </LinearLayout>
 
-            <Button
-                android:id="@+id/add_btn"
+            <LinearLayout
+                android:id="@+id/add_to_basket"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:text="@string/add_to_basket"
-                android:textColor="@color/black_coffee" />
+                android:background="@color/floral_white"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginEnd="@dimen/fab_margin"
+                    android:background="@color/floral_white"
+                    android:src="@drawable/cart" />
+
+                <Button
+                    android:id="@+id/add_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/add_to_basket"
+                    android:textSize="@dimen/btn_text" />
+            </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </RelativeLayout>
