--- a/WalSmart/app/src/main/res/layout/product_set_design.xml
+++ b/WalSmart/app/src/main/res/layout/product_set_design.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
+    android:layout_height="70dp">
 
     <LinearLayout
         android:layout_width="180dp"
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:text="Product name"
             android:textColor="@color/floral_white"
-            android:textSize="25sp"
+            android:textSize="19sp"
             android:textStyle="bold" />
 
         <TextView
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:text="Price"
             android:textColor="@color/floral_white"
-            android:textSize="20sp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/product_size"
@@ -32,46 +32,45 @@
             android:layout_height="wrap_content"
             android:text="Size"
             android:textColor="@color/floral_white"
-            android:textSize="20sp" />
+            android:textSize="16sp" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/product_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginVertical="@dimen/fab_margin"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="@dimen/fab_margin"
         android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/decrease"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/minus" />
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:foreground="@drawable/selector_minus" />
 
         <TextView
             android:id="@+id/product_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/fab_margin"
-            android:layout_marginTop="2dp"
             android:textColor="@color/black_coffee"
             android:textSize="25sp"
             android:textStyle="bold" />
 
         <ImageButton
             android:id="@+id/increase"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginStart="@dimen/fab_margin"
-            android:src="@drawable/plus" />
+            android:foreground="@drawable/selector_plus" />
+        <ImageButton
+            android:id="@+id/cancel_btn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="40dp"
+            android:foreground="@drawable/selector_cancel"/>
     </LinearLayout>
 
-    <ImageButton
-        android:id="@+id/cancel_btn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center"
-        android:layout_marginStart="30dp"
-        android:src="@drawable/cancel" />
-</LinearLayout>
+
+</RelativeLayout>
