--- a/WalSmart/app/src/main/res/values/themes.xml
+++ b/WalSmart/app/src/main/res/values/themes.xml
@@ -20,7 +20,9 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
-
+<style name="Theme.WalSmart.ImageButton" parent="Widget.AppCompat.ImageButton">
+    <item name="android:height">30dp</item>
+</style>
     <style name="Theme.WalSmart.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.WalSmart.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
