--- a/WalSmart/app/src/main/res/layout/activity_order.xml
+++ b/WalSmart/app/src/main/res/layout/activity_order.xml
@@ -65,17 +65,29 @@
         android:ems="10"
         android:inputType="phone"
         android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/priceTextView"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/submit_btn"
         android:layout_alignParentEnd="true"
-        android:textSize="25sp"
-        android:layout_margin="@dimen/fab_margin"
-android:textColor="@color/black_coffee"
-        android:text="@string/total_price" />
+
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_gravity="center"
+            android:layout_height="50dp"
+            android:src="@drawable/piggy"/>
+
+        <TextView
+            android:id="@+id/priceTextView"
+            android:layout_width="252dp"
+            android:layout_height="98dp"
+            android:layout_margin="@dimen/fab_margin"
+            android:text="@string/total_price"
+            android:textColor="@color/black_coffee"
+            android:textSize="25sp" />
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/back_btn"
