--- a/WalSmart/app/src/main/res/layout/my_spinner.xml
+++ b/WalSmart/app/src/main/res/layout/my_spinner.xml
@@ -7,6 +7,6 @@
     android:layout_height="wrap_content"
     android:textSize="20sp"
     android:gravity="left"
-    android:textColor="@color/floral_white"
+    android:textColor="@color/black_coffee"
     android:padding="5dip"
     tools:ignore="RtlHardcoded" />
