--- a/WalSmart/app/src/main/res/values/colors.xml
+++ b/WalSmart/app/src/main/res/values/colors.xml
@@ -11,6 +11,6 @@
     <color name="alice_blue">#F1F4F9</color>
     <color name="floral_white">#FFFCF7</color>
     <color name="black_coffee">#2B2B2B</color>
-    <color name="apricot">#FDC9B0</color>
+    <color name="apricot">#CDDC39</color>
     <color name="green">#859A6D</color>
 </resources>
