--- a/WalSmart/app/src/main/res/values/ids.xml
+++ b/WalSmart/app/src/main/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
     <item name="list" type="id" />
     <item name="confirm_order" type="id" />
+    <item name="login" type="id" />
 </resources>
