--- a/WalSmart/app/src/main/res/values/colors.xml
+++ b/WalSmart/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="black_coffee">#2B2B2B</color>
     <color name="apricot">#CDDC39</color>
     <color name="green">#859A6D</color>
+    <color name="toolbar_color">#E1E0BA</color>
 </resources>
