--- a/WalSmart/app/src/main/res/layout/activity_edit_set.xml
+++ b/WalSmart/app/src/main/res/layout/activity_edit_set.xml
@@ -4,12 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/floral_white"
     tools:context=".ProductSet.EditSet">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/toolbar_color"></androidx.appcompat.widget.Toolbar>
+
     <LinearLayout
+        android:id="@+id/set_info"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:id="@+id/set_info">
+        android:layout_below="@id/toolbar">
 
         <ImageView
             android:id="@+id/set_image"
@@ -50,10 +58,11 @@
         android:id="@+id/set_products"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/set_info"
         android:layout_above="@+id/add_to_basket"
+        android:layout_below="@+id/set_info"
         android:layout_marginTop="@dimen/fab_margin"
         android:layout_marginBottom="@dimen/fab_margin" />
+
     <LinearLayout
         android:id="@+id/add_to_basket"
         android:layout_width="wrap_content"
@@ -61,11 +70,13 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal">
+
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginVertical="@dimen/fab_margin"
-            android:src="@drawable/basket"/>
+            android:src="@drawable/basket" />
+
         <Button
             android:id="@+id/add_btn_sets"
             android:layout_width="wrap_content"
