--- a/WalSmart/app/src/main/res/layout/activity_order.xml
+++ b/WalSmart/app/src/main/res/layout/activity_order.xml
@@ -4,15 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/floral_white"
     tools:context=".OrderActivity"
-    android:layout_marginStart="@dimen/fab_margin"
     >
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/toolbar_color"></androidx.appcompat.widget.Toolbar>
     <TextView
         android:id="@+id/choose_city"
         android:layout_width="250dp"
+        android:layout_below="@id/toolbar"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:layout_marginStart="@dimen/fab_margin"
         android:text="@string/choose_city"
         android:textColor="@color/apricot"
         android:textSize="25sp"
@@ -23,6 +30,7 @@
         style="@style/Widget.AppCompat.Spinner.Underlined"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/fab_margin"
         android:layout_below="@id/choose_city"
         android:layout_marginBottom="80dp"
         android:spinnerMode="dialog"
@@ -31,6 +39,7 @@
     <TextView
         android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/fab_margin"
         android:layout_above="@id/shops_spinner"
         android:text="@string/choose_shop"
         android:textColor="@color/apricot"
@@ -45,9 +54,12 @@
         android:layout_below="@id/cities_spinner"
         android:layout_marginBottom="80dp"
         android:spinnerMode="dialog"
+        android:layout_marginStart="@dimen/fab_margin"
+
         />
 
     <TextView
+        android:layout_marginStart="@dimen/fab_margin"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_above="@id/editTextPhone"
@@ -57,6 +69,7 @@
         />
 
     <EditText
+        android:layout_marginStart="@dimen/fab_margin"
         android:id="@+id/editTextPhone"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
@@ -93,6 +106,7 @@
         android:id="@+id/back_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/fab_margin"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/fab_margin"
         android:text="@string/back"
@@ -111,6 +125,4 @@
         android:textSize="@dimen/btn_text"
 
         />
-
-
 </RelativeLayout>
