--- a/WalSmart/app/src/main/res/layout/activity_product_sets.xml
+++ b/WalSmart/app/src/main/res/layout/activity_product_sets.xml
@@ -3,10 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/floral_white"
     android:layout_height="match_parent"
     tools:context=".ProductSet.ProductSetActivity">
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/toolbar_color" >
+    </androidx.appcompat.widget.Toolbar>
     <SearchView
         android:id="@+id/search_product_set"
+        android:layout_below="@id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
@@ -27,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/fab_margin"
         android:text="@string/basket"
         android:textSize="@dimen/btn_text" />
 </RelativeLayout>
