--- a/WalSmart/app/src/main/res/layout/activity_sign_up.xml
+++ b/WalSmart/app/src/main/res/layout/activity_sign_up.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="25dp"
+    android:background="@color/floral_white"
+    android:padding="25dp"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".User.SignUpActivity">
