--- a/WalSmart/app/src/main/res/menu/menu_main.xml
+++ b/WalSmart/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.walsmart.MainActivity">
+    tools:context="com.example.walsmart.BasketActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_about"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/about"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_log_out"
+        android:orderInCategory="100"
+        android:title="@string/log_out"
         app:showAsAction="never" />
 </menu>
