--- a/WalSmart/app/src/main/res/values/themes.xml
+++ b/WalSmart/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.WalSmart" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.WalSmart" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/apricot</item>
         <item name="colorPrimaryVariant">@color/apricot</item>
@@ -13,7 +13,6 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="fontFamily">@font/cavollini</item>
-        <item name="android:background">@color/floral_white</item>
         <item name="android:textColor">@color/black_coffee</item>
     </style>
 
@@ -24,6 +23,7 @@
 <style name="Theme.WalSmart.ImageButton" parent="Widget.AppCompat.ImageButton">
     <item name="android:height">30dp</item>
 </style>
+
     <style name="Theme.WalSmart.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.WalSmart.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
