--- a/WalSmart/app/src/main/res/layout/activity_log_in.xml
+++ b/WalSmart/app/src/main/res/layout/activity_log_in.xml
@@ -94,7 +94,7 @@
         android:backgroundTint="@color/floral_white"
         android:text="Not registered? Sign up here"
         android:textAllCaps="false"
-        android:textColor="@color/black_coffee"
+        android:textColor="@color/toolbar_color"
         android:textSize="13sp" />
 
 </LinearLayout>
