--- a/WalSmart/app/src/main/res/layout/activity_order.xml
+++ b/WalSmart/app/src/main/res/layout/activity_order.xml
@@ -21,7 +21,8 @@
         android:layout_marginTop="50dp"
         android:layout_marginStart="@dimen/fab_margin"
         android:text="@string/choose_city"
-        android:textColor="@color/apricot"
+        android:textStyle="bold"
+        android:textColor="@color/toolbar_color"
         android:textSize="25sp"
         />
 
@@ -42,7 +43,8 @@
         android:layout_marginStart="@dimen/fab_margin"
         android:layout_above="@id/shops_spinner"
         android:text="@string/choose_shop"
-        android:textColor="@color/apricot"
+        android:textStyle="bold"
+        android:textColor="@color/toolbar_color"
         android:textSize="25sp"
         />
 
@@ -64,7 +66,8 @@
         android:layout_height="wrap_content"
         android:layout_above="@id/editTextPhone"
         android:text="@string/phone_number"
-        android:textColor="@color/apricot"
+        android:textStyle="bold"
+        android:textColor="@color/toolbar_color"
         android:textSize="25sp"
         />
 
