--- a/WalSmart/app/src/main/res/layout/activity_products.xml
+++ b/WalSmart/app/src/main/res/layout/activity_products.xml
@@ -17,6 +17,8 @@
         android:layout_width="match_parent"
         android:layout_below="@id/toolbar"
         android:layout_height="wrap_content"
+        android:background="#25FF6F00"
+        android:layout_margin="@dimen/fab_margin"
         android:clickable="true"
         android:focusable="true" />
 
