--- a/WalSmart/app/src/main/res/layout/activity_sign_up.xml
+++ b/WalSmart/app/src/main/res/layout/activity_sign_up.xml
@@ -85,6 +85,6 @@
         android:backgroundTint="@color/floral_white"
         android:text="Already have an account? Log In here"
         android:textAllCaps="false"
-        android:textColor="@color/black_coffee"
+        android:textColor="@color/toolbar_color"
         android:textSize="13sp" />
 </LinearLayout>
